done refactoring ch04